--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
       uses: qxf2/rust-lambda-action@v1.0.1
       with:
         lambda_directory: '.'
-        iam_role: ROLE_LAMBDA
+        iam_role: ${{ secrets.AWS_IAM_ROLE }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
