--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0.133"
 
 tokio = { version = "1", features = ["macros"] }
 tower = "0.5.1"
-tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
+tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "trace", "normalize-path", "add-extension"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 
